--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,8 @@ et_xmlfile==2.0.0
 fastapi==0.115.12
 Flask==3.1.1
 flask-cors==6.0.0
+Flask-SQLAlchemy==3.1.1
+Flask-Migrate==4.0.5
 fonttools==4.58.0
 fpdf==1.7.2
 fpdf2==2.8.3
